--- a/altaUsuario.html
+++ b/altaUsuario.html
@@ -20,23 +20,39 @@
     <form class="form-horizontal" role="form" id="userForm">
         <h2 class="col-sm-offset-5">Registrar Usuario</h2>
         <div class="form-group">
-            <label for="firstName" class="col-sm-3 control-label">Nombre Completo</label>
-            <div class="col-sm-9">
-                <input type="text" name="name" placeholder="Nombre Apellido" class="form-control" autofocus required>
-                <span class="help-block">Nombre Apellido, ej.: Juan Perez</span>
-            </div>
-        </div>
-        <div class="form-group">
             <label for="usuario" class="col-sm-3 control-label">Usuario</label>
             <div class="col-sm-9">
-                <input type="text" name="username" placeholder="Usuario" class="form-control" required>
-                <span class="help-block">Nombre de usuario para loguearse</span>
+                <input type="text" name="username" placeholder="Usuario" class="form-control" autofocus required>
             </div>
         </div>
         <div class="form-group">
             <label for="password" class="col-sm-3 control-label">Contrase&ntilde;a</label>
             <div class="col-sm-9">
                 <input type="password" name="password" placeholder="Contrase&ntilde;a" class="form-control" required>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="firstName" class="col-sm-3 control-label">Nombre</label>
+            <div class="col-sm-9">
+                <input type="text" name="firstName" placeholder="Nombre" class="form-control" required>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="lastName" class="col-sm-3 control-label">Apellido</label>
+            <div class="col-sm-9">
+                <input type="text" name="lastName" placeholder="Apellido" class="form-control" required>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="dni" class="col-sm-3 control-label">DNI</label>
+            <div class="col-sm-9">
+                <input type="text" name="dni" placeholder="13555333" class="form-control" required>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="tel" class="col-sm-3 control-label">Tel&eacute;fono</label>
+            <div class="col-sm-9">
+                <input type="text" name="tel" placeholder="4555-6666" class="form-control" required>
             </div>
         </div>
         <div class="form-group" id="rol">
@@ -47,7 +63,7 @@
         </div>
         <div class="form-group">
             <div class="col-sm-9 col-sm-offset-3">
-                <button type="submit" class="btn btn-primary btn-block" >Registrar</button>
+                <button type="submit" class="btn btn-primary btn-block">Registrar</button>
             </div>
         </div>
         
