--- a/altaUsuario.html
+++ b/altaUsuario.html
@@ -18,11 +18,11 @@
 <body>
 <div class="container">
     <form class="form-horizontal" role="form" id="userForm">
-        <h2 class="col-sm-offset-5">Registrar Usuario</h2>
+        <h2 class="col-sm-offset-5"> Registrar Usuario</h2>
         <div class="form-group">
             <label for="usuario" class="col-sm-3 control-label">Usuario</label>
             <div class="col-sm-9">
-                <input type="text" name="username" placeholder="Usuario" class="form-control" autofocus required>
+                <input type="text" name="usuario" placeholder="Usuario" class="form-control" autofocus required>
             </div>
         </div>
         <div class="form-group">
@@ -47,12 +47,6 @@
             <label for="dni" class="col-sm-3 control-label">DNI</label>
             <div class="col-sm-9">
                 <input type="text" name="dni" placeholder="13555333" class="form-control" required>
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="tel" class="col-sm-3 control-label">Tel&eacute;fono</label>
-            <div class="col-sm-9">
-                <input type="text" name="tel" placeholder="4555-6666" class="form-control" required>
             </div>
         </div>
         <div class="form-group" id="rol">
