--- a/navbarEmpleado.html
+++ b/navbarEmpleado.html
@@ -13,7 +13,7 @@
     <div class="navbar-collapse collapse" id="navigationbar">
         <ul class="nav navbar-nav" id="navbar">
         <li class="active"><a href="index.php">Home</a></li>
-        <li><a href="#" id="">Ingresar Auto</a></li>
+        <li><a href="agregarAuto.php" id="">Ingresar Auto</a></li>
         <li><a href="#">Salida Auto</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
