--- a/navbarEmpleado.html
+++ b/navbarEmpleado.html
@@ -14,7 +14,7 @@
         <ul class="nav navbar-nav" id="navbar">
         <li class="active"><a href="index.php">Home</a></li>
         <li><a href="agregarAuto.php" id="">Ingresar Auto</a></li>
-        <li><a href="#">Salida Auto</a></li>
+        <li><a href="sacarAuto.php">Salida Auto</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
         <li><a href="#" id="logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
