--- a/login.html
+++ b/login.html
@@ -29,9 +29,8 @@
 </head>
 <body>
     <div class="container">
-        <div class="card card-container">
-            <!-- <img class="profile-img-card" src="//lh3.googleusercontent.com/-6V8xOA6M7BA/AAAAAAAAAAI/AAAAAAAAAAA/rzlHcD0KYwo/photo.jpg?sz=120" alt="" /> -->
-            <img id="profile-img" class="img-responsive profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
+        <div class="card card-container col-lg-offset-3 col-lg-6">
+            <img id="profile-img" class="img-responsive profile-img-card" src="profile-image.png" />
             <p id="profile-name" class="profile-name-card"></p>
             <div id="divResultado"></div>
             <form class="form" role="form" id="loginForm">
