Agregada imagen de fondo. Cambiadas las estadisticas

--- a/navbarEmpleado.html
+++ b/navbarEmpleado.html
@@ -13,6 +13,7 @@
     <div class="navbar-collapse collapse" id="navigationbar">
         <ul class="nav navbar-nav" id="navbar">
         <li class="active"><a href="index.php">Home</a></li>
+        <li><a href="cocheras.php" id="">Cocheras</a></li>
         <li><a href="agregarAuto.php" id="">Ingresar Auto</a></li>
         <li><a href="sacarAuto.php">Salida Auto</a></li>
         </ul>
