Cambiada las screen de login

--- a/login.html
+++ b/login.html
@@ -11,14 +11,13 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="scripts.js"></script>
+    <link rel="stylesheet" href="estilos.css">
     <style>
-        body {
-            background: #eee !important;	
-        }
         .card-container{
-            background: white;
+            background: #EEE;
             padding-top: 10px;
             margin-top: 20px;
+            padding-bottom: 10px;
         }
         .img-responsive {
         margin: 0 auto;
