Agregada la opcion de cambiar precios y pass

--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
 <body>
     <div class="container">
         <div class="card card-container col-lg-offset-3 col-lg-6">
-            <img id="profile-img" class="img-responsive profile-img-card" src="profile-image.png" />
+            <img id="profile-img" class="img-responsive profile-img-card" src="IMAGENES/profile-image.png" />
             <p id="profile-name" class="profile-name-card"></p>
             <div id="divResultado"></div>
             <form class="form" role="form" id="loginForm">
