--- a/navbarEmpleado.html
+++ b/navbarEmpleado.html
@@ -12,13 +12,19 @@
     </div> <!--/ .navbar-header -->
     <div class="navbar-collapse collapse" id="navigationbar">
         <ul class="nav navbar-nav" id="navbar">
-        <li class="active"><a href="index.php">Home</a></li>
-        <li><a href="cocheras.php" id="">Cocheras</a></li>
-        <li><a href="agregarAuto.php" id="">Ingresar Auto</a></li>
-        <li><a href="sacarAuto.php">Salida Auto</a></li>
+            <li class="active"><a href="index.php">Home</a></li>
+            <li><a href="cocheras.php" id="">Cocheras</a></li>
+            <li><a href="agregarAuto.php" id="">Ingresar Auto</a></li>
+            <li><a href="sacarAuto.php">Sacar Auto</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-        <li><a href="#" id="logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i> Perfil <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="cambiarPass.php" id="cambiarPass">Cambiar Constrase&ntilde;a</a></li>
+                    <li><a href="#" id="logout">Salir</a></li>
+                </ul>
+            </li>
         </ul>
     </div><!--/.nav-collapse -->
     </div><!--/ .container -->
